Updated initial commit

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "NutBoltIdentifierApp",
-  "displayName": "NutBoltIdentifierApp"
+  "name": "BoltIdentifierApp",
+  "displayName": "BoltIdentifierApp"
 }
