--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
