Updated opencv3 expected module

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -112,7 +112,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-    implementation("com.quickbirdstudios:opencv:4.5.3.0")
+    implementation("com.quickbirdstudios:opencv-contrib:3.4.15")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
